# cmrl-web3-backend

./: .dockerignore  .eslintrc.json  Dockerfile  fly.toml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: docker-image.yml  docker-publish.yml
app/: get_ticket.py  main.py
config/: bullMQConfig.ts  bullMqConfig.ts  qstashConfig.ts
src/: main.ts  routes.ts
src/controllers/: checkTicket.ts  generateTicketController.ts  health.ts  healthController.ts  ticketController.ts
src/jobs/: ticketHandler.ts
src/models/: env.schema.ts
src/queues/: ticketQueue.ts
src/schemas/: env.ts
src/utils/: logger.ts
